--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div id="result"></div>
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
+    <div id="score">Player: <span id="playerScore">0</span> Computer: <span id="computerScore">0</span></div>
 </body>
 </html>
